Account for fixed header in in-page anchor links
This solution is kind of hacky (basically everything below the header
becomes its own pane, with its own scrollbar) but it's imo better than
the alternative of adding a top padding and negative top margin for
anything that could be an anchor, so alas.

The ?1 query param for the stylesheet is just to force a cache refresh.

--- a/django/newsocialist/static/css/styles.css
+++ b/django/newsocialist/static/css/styles.css
@@ -3,9 +3,20 @@
     color: #fff;
     background-image: url('/static/img/banner.png');
     position: fixed;
+    height: 68px;
     top: 0;
     left: 0;
     z-index: 999;
+}
+
+/* I know this is an abomination but it's less bad than the alternative way of
+ * fixing footnote reference issues (given the fixed header) */
+#scroll {
+    position: fixed;
+    top: 68px;
+    bottom: 0;
+    width: 100%;
+    overflow-y: auto;
 }
 
 .logo img {
@@ -234,6 +245,10 @@ hr {
     }
     .print-only {
         display: block;
+    }
+    #scroll {
+        position: static;
+        overflow-y: visible;
     }
     .article-content {
         column-count: 2;
